// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RefugeCard Component Snapshot testing hauria de coincidir amb el snapshot amb props bàsiques 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 16,
      "elevation": 4,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "overflow": "hidden",
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#f3f4f6",
        "height": 216,
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=800",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
      testID="refuge-image"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "opacity": 1,
          "position": "absolute",
          "right": 8,
          "top": 8,
          "width": 36,
        }
      }
      testID="favorite-button"
    >
      <test-file-stub
        height={24}
        width={24}
      />
    </View>
  </View>
  <View
    pointerEvents="box-none"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 12,
          "flex": 1,
          "marginTop": 4,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#111827",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        Refugi Test
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingRight": 64,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            {
              "color": "#6b7280",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 13,
            }
          }
        >
          Pirineus
        </Text>
        <Text
          style={
            {
              "color": "#9ca3af",
              "fontSize": 12,
              "marginHorizontal": 6,
            }
          }
        >
          •
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <test-file-stub
            height={16}
            width={16}
          />
          <Text
            style={
              {
                "color": "#6b7280",
                "fontSize": 13,
                "lineHeight": 16,
              }
            }
          >
             
            20
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderColor": "#e5e7eb",
          "borderRadius": 8,
          "borderWidth": 1,
          "bottom": 12,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "position": "absolute",
          "right": 16,
          "width": 40,
          "zIndex": 5,
        }
      }
      testID="map-button"
    >
      <Image
        resizeMode="stretch"
        source="test-file-stub"
        style={
          {
            "height": 18,
            "width": 16,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`RefugeCard Component Snapshot testing hauria de coincidir amb el snapshot amb tots els camps 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 16,
      "elevation": 4,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "overflow": "hidden",
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#f3f4f6",
        "height": 216,
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=800",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
      testID="refuge-image"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "opacity": 1,
          "position": "absolute",
          "right": 8,
          "top": 8,
          "width": 36,
        }
      }
      testID="favorite-button"
    >
      <test-file-stub
        height={24}
        width={24}
      />
    </View>
  </View>
  <View
    pointerEvents="box-none"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 12,
          "flex": 1,
          "marginTop": 4,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#111827",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        Refugi Complet
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingRight": 64,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            {
              "color": "#6b7280",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 13,
            }
          }
        >
          Pallars Sobirà
        </Text>
        <Text
          style={
            {
              "color": "#9ca3af",
              "fontSize": 12,
              "marginHorizontal": 6,
            }
          }
        >
          •
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <test-file-stub
            height={16}
            width={16}
          />
          <Text
            style={
              {
                "color": "#6b7280",
                "fontSize": 13,
                "lineHeight": 16,
              }
            }
          >
             
            30
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderColor": "#e5e7eb",
          "borderRadius": 8,
          "borderWidth": 1,
          "bottom": 12,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "position": "absolute",
          "right": 16,
          "width": 40,
          "zIndex": 5,
        }
      }
      testID="map-button"
    >
      <Image
        resizeMode="stretch"
        source="test-file-stub"
        style={
          {
            "height": 18,
            "width": 16,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`RefugeCard Component Snapshot testing hauria de coincidir amb el snapshot sense condició 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 16,
      "elevation": 4,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "overflow": "hidden",
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#f3f4f6",
        "height": 216,
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=800",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
      testID="refuge-image"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "opacity": 1,
          "position": "absolute",
          "right": 8,
          "top": 8,
          "width": 36,
        }
      }
      testID="favorite-button"
    >
      <test-file-stub
        height={24}
        width={24}
      />
    </View>
  </View>
  <View
    pointerEvents="box-none"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 12,
          "flex": 1,
          "marginTop": 4,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#111827",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        Refugi Test
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingRight": 64,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            {
              "color": "#6b7280",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 13,
            }
          }
        >
          Pirineus
        </Text>
        <Text
          style={
            {
              "color": "#9ca3af",
              "fontSize": 12,
              "marginHorizontal": 6,
            }
          }
        >
          •
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <test-file-stub
            height={16}
            width={16}
          />
          <Text
            style={
              {
                "color": "#6b7280",
                "fontSize": 13,
                "lineHeight": 16,
              }
            }
          >
             
            20
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderColor": "#e5e7eb",
          "borderRadius": 8,
          "borderWidth": 1,
          "bottom": 12,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "position": "absolute",
          "right": 16,
          "width": 40,
          "zIndex": 5,
        }
      }
      testID="map-button"
    >
      <Image
        resizeMode="stretch"
        source="test-file-stub"
        style={
          {
            "height": 18,
            "width": 16,
          }
        }
      />
    </View>
  </View>
</View>
`;
